@@ -1,6 +1,8 @@
 git-annex (5.20150318) UNRELEASED; urgency=medium
 
   * readpresentkey: New plumbing command for checking location log.
+  * checkpresentkey: New plumbing command to check if a key can be verified
+    to be present on a remote.
 
  -- Joey Hess <id@joeyh.name>  Thu, 19 Mar 2015 17:05:32 -0400
 
